changed media query to ensure porfoolio display block with margin below each item on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -150,4 +150,12 @@ footer a {
     .portfolio {
         padding: 3rem 0;
     }
+
+    .portfolio-row {
+        display: block;
+    }
+
+    .portfolio-item {
+        margin-bottom: 3rem;
+    }
 }
